--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,9 +20,17 @@
       }
     ],
     "paths": {
-      "@/*": ["../src/*"]
+      "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "**/*.mdx", "../.next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "**/*.mdx",
+    "../.next/types/**/*.ts",
+    "../mdx-components.tsx",
+    ".next/types/**/*.ts"
+  ],
   "exclude": ["node_modules"]
 }
