--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,5 +25,14 @@
     "source.fixAll.biome": "explicit"
   },
   "editor.rulers": [90],
-  "typescript.preferences.importModuleSpecifier": "relative"
+  "typescript.preferences.importModuleSpecifier": "relative",
+  "[typescriptreact]": {
+    "editor.defaultFormatter": "biomejs.biome"
+  },
+  "[mdx]": {
+    "editor.codeActionsOnSave": {
+      "source.fixAll": false,
+      "source.organizeImports": false
+    }
+  }
 }
