--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mdx-js/loader": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
     "@next/mdx": "^14.0.4",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@tailwindcss/postcss": "^4.1.7",
     "@tailwindcss/typography": "^0.5.4",
     "@types/node": "^20.10.8",
@@ -25,14 +26,16 @@
     "@types/react-dom": "^18.2.18",
     "@types/webpack-env": "^1.18.1",
     "cheerio": "^1.0.0-rc.12",
-    "clsx": "^2.1.0",
+    "clsx": "^2.1.1",
     "fast-glob": "^3.2.11",
     "feed": "^4.2.2",
     "next": "^14.0.4",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "remark-gfm": "^4.0.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.7",
     "typescript": "^5.3.3"
   },
