--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/react-dom": "^18.2.18",
     "@types/webpack-env": "^1.18.1",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "cheerio": "^1.0.0-rc.12",
     "clsx": "^2.1.1",
     "fast-glob": "^3.2.11",
